Adding token generator method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 ## Uncomment this if u want to use the application-test.properties as the properties for tests
 #spring.profiles.active=${APP_PROFILE:test}
 spring.jpa.open-in-view=false
-
-
 spring.jpa.show-sql=true
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
